# rosoku

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  rosoku.html  rosoku.preprocessing.normalize.html  rosoku.riemannian.riemannian_cross_subject.html  rosoku.tl.html  rosoku.utils.get_labels_from_epochs.html  rosoku.utils.nd_to_dataloader.html  rosoku.utils.nd_to_tensor.html  searchindex.js  setup.py  versions.json
.github/: docs.yml
auto_examples/: example_cross-subject-classification.html
docs/: requirements.txt
examples/: README.rst  example_cross-subject-classification-deeplearning.py  example_cross-subject-classification-riemannian.py  example_cross-subject-classification.py  example_within-subject-classification-deeplearning.py  example_within-subject-classification-riemannian.py  sandbox-moabb.py
latest/: .buildinfo  documentation.html  genindex.html  index.html  install.html  modules.html  objects.inv  py-modindex.html  rosoku.conventional.html  rosoku.deeplearning.html  rosoku.deeplearning_cross_subject.html  rosoku.html  rosoku.preprocessing.html  rosoku.preprocessing.normalize.html  rosoku.preprocessing.normalize_tensor.html  rosoku.riemannian.html  rosoku.riemannian.riemannian_cross_subject.html  rosoku.riemannian_cross_subject.html  rosoku.tl.euclidean_alignment.html  rosoku.tl.html  rosoku.tl.riemannian_alignment.html  rosoku.utils.EarlyStopping.html  rosoku.utils.dataset_to_dataloader.html  rosoku.utils.get_ddp_params.html  rosoku.utils.get_labels_from_epochs.html  rosoku.utils.get_predictions.html  (+8 more)
(+223 files in other folders)
